--- a/experiencia/css/movil.css
+++ b/experiencia/css/movil.css
@@ -44,6 +44,10 @@ a link.depth-0 {
     margin-bottom: -10px;
 }
 
+.information_language {
+    display: none;
+}
+
 .principal-text {
     color: white;
     font-size: 20px;
