--- a/conocimientos/css/estilo.css
+++ b/conocimientos/css/estilo.css
@@ -19,7 +19,6 @@ body {
     width: 100%;
     height: 100px;
     margin: 0;
-    p
 }
 
 .cuadro-superior {
@@ -34,6 +33,15 @@ body {
     float: left;
     margin-top: -10px;
 	margin-left:150px;
+}
+
+.information_language {
+    float: right;
+    font-size: 23px;
+    margin-top: 30px;
+    text-decoration: underline;
+    cursor: pointer;
+    color: white;
 }
 
 .principal-text {
@@ -60,7 +68,7 @@ body {
 .cuadro-menu {
     width: 100%;
     height: 50px;
-    background-color: #c4ddbb;
+    background-color: #5ebf3c;
     margin-top: -16px;
     /*padding-left: 20px;*/
 }
@@ -85,7 +93,6 @@ body {
     text-decoration: none;
     list-style-type: none;
 	  font-weight: bold;
-    z
 }
 
 .bordito {
@@ -197,6 +204,9 @@ a {
     cursor: pointer;
 }
 
+.content_available {
+    border: 1px dashed #0077ff;
+}
 
 h2 {
     color: #77D6A9;
