--- a/conocimientos/css/movil.css
+++ b/conocimientos/css/movil.css
@@ -58,6 +58,10 @@ body {
     text-align: center;
 }
 
+.information_language {
+    display: none;
+}
+
 .titulo {
     text-align: center;
     color: #959393;
