--- a/experiencia/css/tablet.css
+++ b/experiencia/css/tablet.css
@@ -34,6 +34,16 @@ body {
     margin-top: -10px;
 }
 
+.information_language {
+    float: right;
+    font-size: 23px;
+    margin-top: 27px;
+    margin-right: 80px;
+    text-decoration: underline;
+    cursor: pointer;
+    color: white;
+}
+
 @media screen and (max-width:6400px) and (min-width:681px) {
     #Movil {
         display:none;
@@ -50,7 +60,7 @@ body {
     float: left;
     color: white;
     font-size: 20px;
-    margin-left: 50px;
+    margin-left: 10px;
     margin-top: 30px;
     font-weight: bold;
     /*font-family: sans-serif;*/
@@ -70,7 +80,7 @@ body {
 .cuadro-menu {
     width: 100%;
     height: 50px;
-    background-color: #fcd293; 
+    background-color: #fcaa2e; 
     margin-top: -16px;
     padding-left: 100px;
 }
