--- a/menu/css/estilos.css
+++ b/menu/css/estilos.css
@@ -1,5 +1,6 @@
 .mundo{
-    font-family: 'Lobster', cursive;
+    /*font-family: 'Lobster', cursive;*/
+    font-family: sans-serif;
 }
 
 body {
@@ -43,6 +44,14 @@ span {
     /*font-family:serif;*/
     margin-left: 100px;
     margin-top: 10px;
+}
+
+.information_language {
+    float: right;
+    font-size: 23px;
+    margin-top: 0px;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .cabeza {
@@ -248,6 +257,7 @@ h1 {
     height: 900px;
     background-color: white;
     box-shadow: 0 2px 0 0 #e5e5e5;
+    margin-top: 40px;
 }
 
 .box2 {
@@ -281,7 +291,8 @@ h1 {
 .box4 {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px; 
-    height: 300px;
+    /*height: 300px;*/
+    height: auto;
     background-color: white;
     box-shadow: 0 2px 0 0 #e5e5e5;
     margin-top: 50px;
