--- a/menu/material/css/movil.css
+++ b/menu/material/css/movil.css
@@ -31,6 +31,10 @@ body{
     margin-top: -50px;
 }
 
+.information_language {
+    display: none;
+}
+
 .titulo {
     font-size: 20px;
     font-weight: bold;
