--- a/conocimientos/css/tablet.css
+++ b/conocimientos/css/tablet.css
@@ -14,11 +14,10 @@ body {
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 100px;
     margin: 0;
-    
 }
 
 .cuadro-superior {
@@ -40,12 +39,12 @@ body {
     margin-top: 29px;
     text-decoration: underline;
     cursor: pointer;
-    color: white;
+    color: #0042ff;
 }
 
 .principal-text {
     float: left;
-    color: white;
+    color: #38c00e;
     font-size: 20px;
     margin-left: 15px;
     margin-top: 30px;
@@ -68,10 +67,9 @@ body {
 .cuadro-menu {
     width: 100%;
     height: 50px;
-    background-color: #5ebf3c; 
+    background-image: linear-gradient(-90deg, #41e485, #5de7f8);
     margin-top: -16px;
     padding-left: 100px;
-   
 }
 
 .menu {
@@ -101,7 +99,7 @@ body {
 }
 
 .bordito1 {
-    color: black;
+    color: rgb(18, 0, 82);
     border-right: 1px solid #FFF;
 }
 
@@ -171,6 +169,10 @@ a {
     box-shadow: 10px 10px 5px #888888;
     transition: 0.5s;
     cursor: pointer;
+}
+
+.content_available {
+    border: 1px dashed #0077ff;
 }
 
 h2 {
