--- a/conocimientos/proyectos/css/movil.css
+++ b/conocimientos/proyectos/css/movil.css
@@ -9,7 +9,7 @@ body{
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 130px;
     margin: 0;
@@ -34,8 +34,8 @@ body{
 }
 
 .tittle {
-    font-size: 20px;
-    color: white;
+    font-size: 28px;
+    color: #38c00e;
     font-weight: bold;
     text-align: center;
 }
@@ -49,7 +49,7 @@ ul {
 .cuerpo {
     max-width: 400px;
     height: auto;
-    margin: auto;
+    margin-top: 25px;
 }
 
 .cuadro {
