--- a/conocimientos/proyectos/css/tablet.css
+++ b/conocimientos/proyectos/css/tablet.css
@@ -13,18 +13,16 @@ body {
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 100px;
-    margin: 0;
-    
+    border-bottom: 2px solid #e4e4e4;
 }
 
 .cuadro-superior {
     width: 450px;
     height: 70px;
     margin: auto;
-    
 }
 
 .logo {
@@ -43,7 +41,7 @@ body {
     float: left;
     font-size: 25px;
     font-weight: bold;
-    color: white;
+    color: #38c00e;
     font-weight: bold;
     margin-top: -15px;
     margin-left: 80px;
