--- a/conocimientos/proyectos/sistema/css/movil.css
+++ b/conocimientos/proyectos/sistema/css/movil.css
@@ -5,7 +5,7 @@ body{
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 130px;
     margin: 0;
@@ -15,7 +15,6 @@ body{
     width: 150px;
     height: 130px;
     margin: auto;
-    
 }
 
 .logo {
@@ -27,8 +26,8 @@ body{
 
 .tittle {
     text-align: center;
-    font-size: 20px;
-    color: white;
+    font-size: 28px;
+    color: #38c00e;
     font-weight: bold;
 }
 
