--- a/experiencia/css/estilo.css
+++ b/experiencia/css/estilo.css
@@ -18,11 +18,10 @@ body {
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 90px;
     margin: 0;
-    
 }
 
 .cuadro-superior {
@@ -47,7 +46,7 @@ body {
     margin-right: 80px;
     text-decoration: underline;
     cursor: pointer;
-    color: white;
+    color: #0042ff;
 }
 
 @media screen and (max-width:6400px) and (min-width:681px) {
@@ -64,8 +63,8 @@ body {
 
 .principal-text {
     float: left;
-    color: white;
-    font-size: 20px;
+    color: #38c00e;
+    font-size: 23px;
     margin-left: 90px;
     margin-top: 30px;
     font-weight: bold;
@@ -86,7 +85,7 @@ body {
 .cuadro-menu {
     width: 100%;
     height: 50px;
-    background-color: #fcaa2e; 
+    background-image: linear-gradient(-90deg, #41e485, #5de7f8); 
     margin-top: -16px;
     /*padding-left: 150px;*/
 }
@@ -114,7 +113,7 @@ body {
 }
 
 .bordito1 {
-    color: #000;
+    color: rgb(18, 0, 82);
     border-right: 1px solid #FFF;
 }
 
@@ -123,7 +122,7 @@ body {
 }
 
 #conocimiento:hover{
-    color: #c4ddbb;
+    color: #005463;
     transition: 0.5s;
 }
 
@@ -132,7 +131,7 @@ body {
 }
 
 #inicio:hover{
-    color: #8598a0;
+    color: #005463;
     transition: 0.5s;
 }
 
@@ -141,7 +140,7 @@ body {
 }
 
 #materias:hover{
-    color: #71bcb3;
+    color: #005463;
     transition: 0.5s;
 }
 
@@ -150,7 +149,7 @@ body {
 }
 
 #contacto:hover{
-    color: #eb6924;
+    color: #005463;
     transition: 0.5s;
 }
 
