--- a/experiencia/css/movil.css
+++ b/experiencia/css/movil.css
@@ -21,7 +21,7 @@ a link.depth-0 {
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 140px;
     margin: 0;
@@ -49,8 +49,8 @@ a link.depth-0 {
 }
 
 .principal-text {
-    color: white;
-    font-size: 20px;
+    color: #38c00e;
+    font-size: 28px;
     font-weight: bold;
     /*font-family: sans-serif;*/
     text-align: center;
@@ -119,8 +119,7 @@ a link.depth-0 {
 }
 
 .link {
-    color: blue;
-    
+    color: #3196CC;
     max-width: 100px;
 }
 
