--- a/experiencia/css/tablet.css
+++ b/experiencia/css/tablet.css
@@ -14,11 +14,10 @@ body {
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 90px;
     margin: 0;
-    
 }
 
 .cuadro-superior {
@@ -41,7 +40,7 @@ body {
     margin-right: 80px;
     text-decoration: underline;
     cursor: pointer;
-    color: white;
+    color: #0042ff;
 }
 
 @media screen and (max-width:6400px) and (min-width:681px) {
@@ -58,7 +57,7 @@ body {
 
 .principal-text {
     float: left;
-    color: white;
+    color: #38c00e;
     font-size: 20px;
     margin-left: 10px;
     margin-top: 30px;
@@ -80,7 +79,7 @@ body {
 .cuadro-menu {
     width: 100%;
     height: 50px;
-    background-color: #fcaa2e; 
+    background-image: linear-gradient(-90deg, #41e485, #5de7f8);
     margin-top: -16px;
     padding-left: 100px;
 }
@@ -107,7 +106,7 @@ body {
 }
 
 .bordito1 {
-    color: #000;
+    color: rgb(18, 0, 82);
     border-right: 1px solid #FFF;
 }
 
