--- a/menu/css/estilos.css
+++ b/menu/css/estilos.css
@@ -15,12 +15,13 @@ body {
   clear:both;
 }
 .superior {
-    background-color: #6d6d6d;
+    background-color: #ffffff;
 	/*background-color: #6d6d6d;*/
     width:100%;
     height: 100px;
-    margin: auto 0;
-    
+    /*margin: auto 0;*/
+    margin-bottom: 10px;
+    border-bottom: 23px solid #d2d2d2;
 }
 
 .cuadro-superior {
@@ -39,7 +40,7 @@ body {
 }
 
 span {
-    color: white;
+    color: #38c00e;
     font-size: 28px;
     /*font-family:serif;*/
     margin-left: 100px;
@@ -52,6 +53,7 @@ span {
     margin-top: 0px;
     text-decoration: underline;
     cursor: pointer;
+    color: #0042ff;
 }
 
 .cabeza {
@@ -97,7 +99,7 @@ span {
 
 .menu {
     width: 1100px;
-    background-color: #8598a0; 
+    background-image: linear-gradient(-90deg, #41e485, #5de7f8);
     height: 50px;
     margin: auto;
     text-align: center;
@@ -120,7 +122,7 @@ span {
 }
 
 .bordito1 {
-    color: black;
+    color: rgb(18, 0, 82);
     border-right: 1px solid #FFF;
 }
 
@@ -129,7 +131,7 @@ span {
 }
 
 #conocimiento:hover{
-    color: #c4ddbb;
+    color: #005463;
     transition: 0.5s;
 }
 
@@ -138,7 +140,7 @@ span {
 }
 
 #experiencia:hover{
-    color: #fcd293;
+    color: #005463;
     transition: 0.5s;
 }
 
@@ -147,7 +149,7 @@ span {
 }
 
 #materias:hover{
-    color: #71bcb3;
+    color: #005463;
     transition: 0.5s;
 }
 
