--- a/menu/css/tablet.css
+++ b/menu/css/tablet.css
@@ -12,7 +12,7 @@ body {
 
 
 .superior {
-    background-color: #6d6d6d;
+    background-color: #ffffff;
     width:100%;
     height: 100px;
     margin: auto 0;
@@ -38,11 +38,11 @@ body {
     font-size: 23px;
     text-decoration: underline;
     cursor: pointer;
-    color: white;
+    color: #0042ff;
 }
 
 span {
-    color: white;
+    color: #38c00e;
     font-size: 28px;
     margin-left: 50px;
 }
@@ -100,7 +100,7 @@ span {
 
 .menu {
     width: 700px;
-    background-color: #8598a0;
+    background-image: linear-gradient(-90deg, #41e485, #5de7f8);
     height: 50px;
     margin: auto;
     text-align: center;
@@ -123,7 +123,7 @@ span {
 }
 
 .bordito1 {
-    color: black;
+    color: rgb(18, 0, 82);
     border-right: 1px solid #FFF;
 }
 
