--- a/menu/material/css/movil.css
+++ b/menu/material/css/movil.css
@@ -9,7 +9,7 @@ body{
 }
 
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 160px;
     margin: 0;
@@ -36,10 +36,10 @@ body{
 }
 
 .titulo {
-    font-size: 20px;
+    font-size: 28px;
     font-weight: bold;
     /*font-family: sans-serif;*/
-    color: white;
+    color: #38c00e;
     text-align: center;
     padding-top: 10px;
     margin-left: -20px;
