--- a/menu/material/css/tablet.css
+++ b/menu/material/css/tablet.css
@@ -9,11 +9,10 @@ body {
   clear:both;
 }
 .superior {
-    background-color: #424243;
+    background-color: #ffffff;
     width: 100%;
     height: 100px;
     margin: 0;
-    
 }
 
 .cuadro-superior {
@@ -35,7 +34,7 @@ body {
     font-size: 23px;
     margin-top: 25px;
     text-decoration: underline;
-    color: #FFF;
+    color: #0042ff;
     cursor: pointer;
 }
 
@@ -44,7 +43,7 @@ body {
     font-size: 20px;
     font-weight: bold;
     /*font-family: sans-serif;*/
-    color: white;
+    color: #38c00e;
     margin-top: 30px;
     margin-bottom: 10px;
     margin-left: 30px;
@@ -53,9 +52,8 @@ body {
 .cuadro-menu {
     width: 100%;
     height: 50px;
-    background-color: #71bcb3; 
+    background-image: linear-gradient(-90deg, #41e485, #5de7f8);
     margin-top: -10px;
-    
 }
 
 .menu {
@@ -76,6 +74,11 @@ body {
 }
 
 .bordito {
+    border-right: 1px solid #FFF;
+}
+
+.bordito1 {
+    color: rgb(18, 0, 82);
     border-right: 1px solid #FFF;
 }
 
