--- a/experiencia/css/movil.css
+++ b/experiencia/css/movil.css
@@ -156,8 +156,19 @@ footer {
 
 .texto-pie {
     color: #FFF;
-    padding-top: 20px;
+    padding-top: 10px;
     font-size: 20px;
     letter-spacing: 2px;
     text-align: center;
+}
+
+.links_foteer {
+    width:35px; 
+    height: 35px; 
+    margin-top:10px;
+    transition: fill .3s ease-out;
+}
+
+.links_foteer_left {
+    margin-left:20px;
 }
