--- a/menu/material/css/movil.css
+++ b/menu/material/css/movil.css
@@ -123,7 +123,18 @@ footer {
 
 .texto-pie {
     color: #FFF;
-    padding-top: 35px;
+    
     font-size: 22px;
     letter-spacing: 2px;
+}
+
+.links_foteer {
+    width:35px; 
+    height: 35px; 
+    margin-top:10px;
+    transition: fill .3s ease-out;
+}
+
+.links_foteer_left {
+    margin-left:20px;
 }
