--- a/experiencia/css/tablet.css
+++ b/experiencia/css/tablet.css
@@ -31,13 +31,14 @@ body {
     height: 100px;
     float: left;
     margin-top: -10px;
+    margin-left: -30px;
 }
 
 .information_language {
     float: right;
     font-size: 23px;
     margin-top: 27px;
-    margin-right: 80px;
+    margin-right: 30px;
     text-decoration: underline;
     cursor: pointer;
     color: #0042ff;
@@ -59,7 +60,7 @@ body {
     float: left;
     color: #38c00e;
     font-size: 20px;
-    margin-left: 10px;
+    margin-left: 30px;
     margin-top: 30px;
     font-weight: bold;
     /*font-family: sans-serif;*/
@@ -81,7 +82,7 @@ body {
     height: 50px;
     background-image: linear-gradient(-90deg, #41e485, #5de7f8);
     margin-top: -16px;
-    padding-left: 100px;
+    padding-left: 135px;
 }
 
 .menu {
@@ -93,7 +94,7 @@ body {
 
 .menu nav ul li {
     float: left;
-    margin-left:  20px;
+    margin-left: 10px;
     cursor: pointer;
     padding-right: 10px;
     text-decoration: none;
@@ -206,7 +207,18 @@ footer {
 
 .texto-pie {
     color: #FFF;
-    padding-top: 40px;
+    padding-top: 10px;
     font-size: 20px;
     letter-spacing: 2px;
+}
+
+.links_foteer {
+    width:35px; 
+    height: 35px; 
+    margin-top:10px;
+    transition: fill .3s ease-out;
+}
+
+.links_foteer_left {
+    margin-left:20px;
 }
