--- a/menu/css/estilos.css
+++ b/menu/css/estilos.css
@@ -40,10 +40,16 @@ body {
 }
 
 span {
+    color: #fff;
+    font-size: 28px;
+    margin-top: 10px;
+}
+
+#title {
     color: #38c00e;
     font-size: 28px;
     /*font-family:serif;*/
-    margin-left: 100px;
+    margin-left: 165px;
     margin-top: 10px;
 }
 
@@ -57,7 +63,7 @@ span {
 }
 
 .cabeza {
-    background-image: url(../img/01.jpeg);
+    background-image: url(../img/01.jpg);
     width: 100%;
     height: 100%;
     z-index:-1;
@@ -78,8 +84,8 @@ span {
 }
 
 .mundo {
-    padding-top: 50px; 
-    color: #f0bc9b;
+    padding-top: 40px; 
+    color: #fff;
     font-size: 30px;
     /*font-family: 'Lobster', cursive;*/
     letter-spacing: 3px;
@@ -103,8 +109,7 @@ span {
     height: 50px;
     margin: auto;
     text-align: center;
-    padding-left: 260px;
-    
+    padding-left: 300px;
 }
 
 .menu nav ul li {
@@ -489,7 +494,27 @@ footer {
 
 .texto-pie {
     color: #FFF;
-    padding-top: 40px;
+    padding-top: 10px;
     font-size: 20px;
     letter-spacing: 2px;
+}
+
+.links_foteer {
+    width:35px; 
+    height: 35px; 
+    margin-top:10px;
+    transition: fill .3s ease-out;
+}
+
+.links_foteer_left {
+    margin-left:20px;
+}
+
+.icon_link {
+    transition: fill .3s ease-out;
+}
+
+.icon_link:hover {
+    fill: #14b1bb;
+    transition: fill .3s ease-out;
 }
