--- a/menu/css/movil.css
+++ b/menu/css/movil.css
@@ -43,9 +43,15 @@ body {
 }
 
 span {
-    color: #38c00e;
+    color: #fff;
     font-size: 28px;
     font-weight: bold;
+}
+
+#title {
+    color: #38c00e;
+    font-size: 28px;
+    /*font-family:serif;*/
 }
 
 #close_inicio{
@@ -55,7 +61,7 @@ span {
 }
 
 .cabeza {
-    background-image: url(../img/01.jpeg);
+    background-image: url(../img/01.jpg);
     width: 100%;
     height: 250px;
     z-index:-1;
@@ -77,7 +83,7 @@ span {
 
 .mundo {
     padding-top: 50px; 
-    color: #f0bc9b;
+    color: #fff;
     font-size: 30px;
     /*font-family: 'Lobster', cursive;*/
     letter-spacing: 3px;
@@ -345,9 +351,18 @@ footer {
 
 .texto-pie {
     color: #FFF;
-    padding-top: 30px;
+    padding-top: 10px;
     font-size: 20px;
     letter-spacing: 2px;
 }
 
+.links_foteer {
+    width:35px; 
+    height: 35px; 
+    margin-top:10px;
+    transition: fill .3s ease-out;
+}
 
+.links_foteer_left {
+    margin-left:20px;
+}
