--- a/menu/material/css/estilo.css
+++ b/menu/material/css/estilo.css
@@ -1,14 +1,22 @@
-body {
+* {
     margin: 0;
+    padding: 0;
+  }
+
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background-color: #E5E5E5;
     font-family: 'Roboto', sans-serif;
-    padding: 0;
 }
 
 .clear
 {
   clear:both;
 }
+
 .superior {
     background-color: #ffffff;
     width: 100%;
@@ -28,7 +36,7 @@ body {
     height: 100px;
     float: left;
     margin-top: -5px;
-    
+    margin-left: -20px;
 }
 
 .information_language {
@@ -46,7 +54,7 @@ body {
     font-weight: bold;
     /*font-family: sans-serif;*/
     color: #38c00e;
-    padding-left: 100px;
+    padding-left: 160px;
     margin-top: 30px;
 }
 
@@ -55,14 +63,13 @@ body {
     height: 50px;
     background-image: linear-gradient(-90deg, #41e485, #5de7f8);
     margin-top: -16px;
-    padding-left: 150px;
+    padding-left: 265px;
 }
 
 .menu {
     width: 700px;
     height: 50px;
     margin: auto;
-    
 }
 
 .link-contact{
@@ -72,7 +79,7 @@ body {
 .menu nav ul li {
     float: left;
     margin-top: 5px;
-    margin-left:  30px;
+    margin-left:  20px;
     cursor: pointer;
     padding-right: 20px;
     text-decoration: none;
@@ -125,16 +132,17 @@ a {
 
 /*Cuerpo de pagina*/
 
+
 .cuerpo {
     width: 100%;
-    height: auto;
+    min-height: 100%;
     padding-top: 50px;
     margin-bottom: 50px;
 }
 
 .cuadro {
     max-width: 1000px;
-    height: auto;
+    min-height: 100%;
     border: 1px solid #c6c6c6;
     background-color: white;
     border-radius: 5px;
@@ -193,6 +201,8 @@ footer {
     width: 100%;
     height: 100px;
     background-color: #363434; 
+    position: relative;
+    clear: both;
 }
 
 .pie {
@@ -201,7 +211,7 @@ footer {
     border: 1px solid rgba(255, 255, 255, 0);
     margin: auto;
     text-align: center;
-    padding-top: 30px;
+    
 }
 
 .texto-pie {
@@ -209,5 +219,24 @@ footer {
     padding-top: 10px;
     font-size: 20px;
     letter-spacing: 2px;
-    margin-left: 60px;
+}
+
+.links_foteer {
+    width:35px; 
+    height: 35px; 
+    margin-top:10px;
+    transition: fill .3s ease-out;
+}
+
+.links_foteer_left {
+    margin-left:20px;
+}
+
+.icon_link {
+    transition: fill .3s ease-out;
+}
+
+.icon_link:hover {
+    fill: #14b1bb;
+    transition: fill .3s ease-out;
 }
