Update introduction page to be up to date

--- a/menu/css/estilos.css
+++ b/menu/css/estilos.css
@@ -342,8 +342,6 @@ h1 {
 }
 
 .curso-imagen {
-    width: 200px;
-    height: 140px;
     margin-top: 10px;
 }
 
@@ -385,16 +383,15 @@ h1 {
 }
 
 .times-imagen {
-    width: 500px;
-    height: 200px;
     margin-bottom: 15px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
+    border-bottom: 3px solid #e0e0e0;
 }
 
 .col1 {
     width: 500px;
-    height: 550px;
+    height: 630px;
     float: left;
     margin-top: 40px;
     background-color: white;
@@ -405,7 +402,7 @@ h1 {
 
 .col2 {
     width: 500px;
-    height: 550px;
+    height: 630px;
     float: left;
     margin-top: 40px;
     margin-left: 100px;
