--- a/menu/css/movil.css
+++ b/menu/css/movil.css
@@ -127,6 +127,8 @@ h1 {
 
 .des-curso {
     font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     /*font-family: sans-serif;*/
 }
 
@@ -139,8 +141,8 @@ h1 {
     color: #7f7f7f;
     /*font-family: sans-serif;*/
 	margin-bottom:40px;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .box1 {
@@ -166,7 +168,8 @@ h1 {
     height: auto;
     background-color: white;
     box-shadow: 0 2px 0 0 #e5e5e5;
-    margin-top: 30px;
+    margin-top: 100px;
+    padding: 10px;
 }
 
 .box4 {
@@ -206,8 +209,6 @@ h1 {
 }
 
 .curso-imagen {
-    width: 200px;
-    height: 140px;
     margin-top: 10px;
 }
 
@@ -245,6 +246,7 @@ h1 {
     color: #7f7f7f;
     /*font-family: sans-serif;*/
     margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 .times-imagen {
@@ -253,6 +255,7 @@ h1 {
     margin-bottom: 15px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
+    border-bottom: 3px solid #e0e0e0;
 }
 
 .col1 {
@@ -263,7 +266,7 @@ h1 {
     box-shadow: 0 2px 0 0 #e5e5e5;
     border-radius: 10px;
     text-align: center;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
 .col2 {
@@ -274,13 +277,13 @@ h1 {
     box-shadow: 0 2px 0 0 #e5e5e5;
     border-radius: 10px;
     text-align: center;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
 .tiempos {
     margin-top: 40px;
-    margin-left: 70px;
-    margin-right: 70px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-size: 20px;
     color: #7f7f7f;
 }
